--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://petewanca.github.io/akaisore",
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "gh-pages": "^2.2.0",
         "moment": "^2.24.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
